[package]
name = "track"
version = "0.2.0-dev"
authors = ["Jean-Philippe Cugnet <jean-philippe@cugnet.eu>"]
edition = "2021"
license = "GPL-3.0-only"
description = "A quick-and-dirty CLI tool for tracking parcels."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.2", features = ["derive"] }
color-eyre = "0.6"
colored = "2.0"
derive-new = "0.5"
dirs = "4.0"
eyre = "0.6"
inquire = "0.3"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.5"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "blocking", "json"]
