[package]
name = "track"
version = "0.2.1-dev"
authors = ["Jean-Philippe Cugnet <jean-philippe@cugnet.eu>"]
edition = "2021"
license = "GPL-3.0-only"
description = "A quick-and-dirty CLI tool for tracking parcels."

[dependencies]
askama = "0.12"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "wrap_help"] }
color-eyre = "0.6"
colored = "2"
derive-new = "0.5"
dirs = "5"
eyre = "0.6"
inquire = "0.6"
regex = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.7"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "json", "rustls-tls"]
